# alkali-csd-fw

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  fw.dockerfile  requirements.txt
.github/workflows/: build.yml
.west/: config
apu-app/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  buildroot.cmake  requirements.txt
apu-app/scripts/: convert-to-tflite.py  simple-models.py
apu-app/src/: acc.c  acc.cpp  acc.h  cmd.c  cmd.cpp  cmd.h  lba.h  main.c  main.cpp  nvme.h  rpmsg.c  rpmsg.cpp  rpmsg.h  tflite-delegate.cpp  tflite-delegate.hpp  tflite-test.cpp  tflite-utils.cpp  tflite-utils.hpp  tflite-vta-test.cpp  ubpf.h  vm.h  vta-delegate-ops.cpp  vta-delegate.cpp  vta-delegate.hpp
apu-app/src/cmds/: adm_acc_ctl.cpp  fw.c  fw.cpp  identify.c  identify.cpp  io_acc_ctl.cpp  lba.c  lba.cpp  qspi.c  qspi.cpp  status.cpp
apu-app/src/vm/: print.cpp  register.c  register.cpp  tf.cpp
apu-app/src/vta/: driver.h  hw_spec_const.h  macros.h  pynqlib.cpp  sim_driver.cc  sim_tlpp.cc  tf_driver.cc  tf_driver.h  virtual_memory.cc  vta_params.hpp  vta_runtime.cc  vta_runtime.h
apu-app/tests/: add-tests.cpp  basic-vta-delegate-tests.cpp  conv2d-tests.cpp  tests-main.cpp  vta-gemm-test.cpp
br2-external/: external.desc  local.mk
br2-external/board/alkali/patches/linux/: 0004-xilinx_uartps-use-fixed-driver-from-2020.2.patch  0011-dts-add-area-for-RPU-APU-communication.patch  0017-dts-add-xlnk-for-an300.patch  0018-dts-remove-unused-watchdog-on-an300.patch
br2-external/board/an300/overlay/etc/: motd
br2-external/board/an300/patches/uboot/: 0001-Fix-QSPI-boot-scripts.patch  0002-Add-AN300-config-from-petalinux.patch  0003-Use-AN300-DTS-from-Petalinux.patch  0004-Use-Zynq-serial-driver-from-petalinux.patch
br2-external/board/basalt/kernel/: zynqmp-basalt-nvme.dts
br2-external/board/basalt/overlay/lib/firmware/: zephyr.elf
br2-external/board/basalt/patches/linux/: 0001-dts-fix-AR-73079-SD-card-bug.patch  0002-scripts-fix-issue-with-building-using-gcc10.patch  0006-defconfig-add-NVMe-defconfig.patch  0007-dts-nvme-update-config-to-match-OpenAMP-xilinx-examp.patch  0008-rebase-to-2019.1.patch  0009-dts-reserve-512MiB-of-DDR-for-RPU.patch  0010-dts-use-single-memory-area-for-RPU.patch  0012-dts-add-basalt-support.patch  0013-dts-add-qspi-for-basalt.patch  0014-defconfig-enable-XLNK-driver.patch  0015-xlnk-comment-out-code-using-xlate_irq.patch  0016-dts-add-xlnk-for-zcu.patch  0017-dts-add-xlnk-for-basalt.patch  0018-dts-remove-unused-watchdog-on-basalt.patch  0019-dts-add-uartlite-node.patch  0020-dts-enable-i2c-driver.patch  linux-0001-Adjust-Linux-to-Alkali-project.patch
br2-external/board/zcu106/overlay/etc/: motd
br2-external/common/patches/linux/: 0003-dts-add-separate-devicetree-for-NVMe-ZCU106.patch  0005-dts-zcu106-nvme-use-second-PS-uart-as-console.patch  0012-dts-add-an300-support.patch  0013-dts-add-qspi-for-an300.patch  0014-defconfig-enable-XLNK-driver.patch  0015-xlnk-comment-out-code-using-xlate_irq.patch  0016-dts-add-xlnk-for-zcu.patch  0019-dts-add-uartlite-node.patch  0020-dts-enable-i2c-driver.patch
br2-external/common/patches/uboot/: 0001-scripts-dtc-dtc-lexer.l-Fixed-extern-yylloc-to-suppo.patch
br2-external/configs/: an300_defconfig  zcu106_defconfig  zynqmp_nvme_defconfig
docker/: fw.dockerfile  requirements.txt
rpu-app/: CMakeLists.txt  README.md  nvme.overlay  prj.conf  rpu.tcl  west.yml
rpu-app/.west/: config
rpu-app/patches/libmetal/: 0001-cmake-add-support-for-R5-CPU.patch
rpu-app/patches/zephyr/: 0001-arch-arm-cortex_r-disable-ECC-on-TCMs.patch  0002-dts-arm-fix-addresses-of-zynqmp-gic.patch  0003-drivers-timer-add-dummy-functions-to-xlnx-timer.patch  0004-boards-arm-add-suport-for-Enclustra-Mercury-XU-board.patch  0005-drivers-ipm-add-mailbox-driver-for-ZynqMP.patch  0006-soc-zynqmp-add-devicetree-entry-for-mailbox.patch  0007-boards-mercury_xu-enable-mailbox.patch  0008-samples-subsys-ipc-Add-openamp-demo-for-ZynqMP.patch  0009-boards-arm-add-ZCU106-board.patch  0010-zcu106-modify-code-to-match-mercury-target.patch  0011-dts-add-minimal-bindings-for-NVMe-cores.patch  0012-interrupt_controller-gic-Support-multiple-GIC-versio.patch  0013-dts-add-interrupt-fixup-for-NVMe-cores.patch  0014-intc-force-GIC-to-use-GIC-v1-support.patch  0015-linker-add-support-for-running-from-shared-DDR-memor.patch  0016-samples-openamp-run-from-DDR-memory.patch  0017-Fix-ipm-driver-for-zynqmp.patch
rpu-app/src/: cmd.c  cmd.h  dma.c  dma.h  main.c  main.h  nvme.h  nvme_ident_fields.h  nvme_reg_fields.h  nvme_reg_map.h  nvme_tc.h  platform_info.c  platform_info.h  ramdisk.c  ramdisk.h  rpmsg.c  rpmsg.h  rsc_table.c  rsc_table.h  tc.c  tc.h  zynqmp_r5_a53_rproc.c
rpu-app/src/cmds/: create_queues.c  get_log.c  identify.c  queues.c  read.c  set_features.c  vendor.c  write.c
